@@ -119,7 +119,7 @@ def _stdout_redirector(stream):
 
 
 class Tester(object):
-    """ Class that runs all regression tests using Dymola.
+    """ Class that runs regression tests of the Modelica library.
 
     Initiate with the following optional arguments:
 
@@ -136,6 +136,8 @@ class Tester(object):
             If a dict is provided, keys must conform with ``pyfunnel.compareAndReport`` arguments.
     :param skip_verification: Boolean (default ``False``).
             If ``True``, unit test results are not verified against reference points.
+    :param color: Boolean (default ``False``).
+            If ``True``, command line output will be in color.
 
     This class can be used to run all regression tests.
 
@@ -179,7 +181,7 @@ class Tester(object):
        >>> rt = r.Tester(tool="dymola")
        >>> myMoLib = os.path.join("buildingspy", "tests", "MyModelicaLibrary")
        >>> rt.setLibraryRoot(myMoLib)
-       >>> rt.run() # doctest: +SKIP
+       >>> rt.run() # doctest:
        Number of models   : 10
                  blocks   : 2
                  functions: 0
@@ -257,6 +259,7 @@ class Tester(object):
         comp_tool='funnel',
         tol=1E-3,
         skip_verification=False,
+        color=False
     ):
         """ Constructor."""
         if tool == 'optimica':
@@ -376,10 +379,18 @@ class Tester(object):
         # By default, do not show the GUI of the simulator
         self._showGUI = False
 
-        self._color_BOLD = '\033[1m'
-        self._color_OK = '\033[1;32m'
-        self._color_ERROR = '\033[91m'
-        self._color_ENDC = '\033[0m'
+        # Enable or disable colored output
+        if color:
+            self._color_BOLD  = '\033[1m'
+            self._color_OK    = '\033[1;32m'
+            self._color_ERROR = '\033[91m'
+            self._color_ENDC  = '\033[0m'
+        else:
+            self._color_BOLD  = ''
+            self._color_OK    = ''
+            self._color_ERROR = ''
+            self._color_ENDC  = ''
+
 
     def report(self, timeout=600, browser=None, autoraise=True, comp_file=None):
         """Builds and displays HTML report.
